--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,27 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fbhackathon"
+    package="com.example.homework1"
     android:versionCode="1"
     android:versionName="1.0" >
-
+        
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    
     <uses-sdk
-        android:minSdkVersion="7"
+        android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        android:debuggable="true" >
+
         <activity
-            android:name="com.fbhackathon.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.example.cvloc.FragmentMainMenuDummy"
+            android:label="@string/title_activity_basic_main"
+            android:permission="android.permission.WRITE_EXTERNAL_STORAGE" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+         <activity
+     		android:name="com.example.cvloc.BasicMain"
+      		android:label="@string/app_name">          
+ </activity>
     </application>
-
+<!-- name:BasicMain -->
+    
 </manifest>
